# mock_MLOps

./: .questions.md.swp  README.md  questions.md
mock_mlops/: Makefile  README.md  pyproject.toml  requirements.txt
mock_mlops/docs/: mkdocs.yml
mock_mlops/docs/docs/: index.md
mock_mlops/notebooks/: py_files_structure_luke.txt
